Added registration and login handlers alongside with middleware
